Ajustar estrutura com swagger
