# src/domain/swagger.json
@@ -1,18 +1,12 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "0.8.0",
+    "version": "0.8.3",
     "title": "API moveis",
-    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
+    "description": "API de moveis."
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "Moveis",
-      "description": "Endpoints"
-    }
-  ],
   "schemes": [
     "http",
     "https"
@@ -38,7 +32,7 @@
         "description": "Cadastra novo movel no sistema",
         "parameters": [
           {
-            "name": "obj",
+            "name": "",
             "in": "body",
             "description": "Dados do movel",
             "required": true,
@@ -75,13 +69,22 @@
         }
       },
       "put": {
-        "description": "",
+        "description": "Atualiza movel no sistema",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "",
+            "in": "body",
+            "description": "Dados do movel",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CadastrarMovel"
+            }
           }
         ],
         "responses": {
@@ -94,7 +97,7 @@
         }
       },
       "delete": {
-        "description": "",
+        "description": "Exclui movel no sistema",
         "parameters": [
           {
             "name": "id",
@@ -103,14 +106,7 @@
             "type": "string"
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
+        "responses": {}
       }
     }
   },
